css/style.css
@font-face {
  font-family: lightfont;
  src: url('../fonts/lightfont.ttf');
}

/* Global */
html {
  overflow-x: hidden;
}

body {
  height: calc(100vh - 8em);
  padding: 4em;
  color: #000;
  font-family: lightfont;  
  background-color: rgb(25,25,25);
  background-image: url("seagull.jpg"); 
  background-size: cover; 
  background-position: center;
  background-attachment: fixed;
  background-repeat: no-repeat;
}

h1 {
  font-size: 40px;
}

h4 {
  font-weight: 100;
  font-style: italic;
}

.rect {
  width: 400px;
  border: 3px solid #000;
  padding:25px;
  text-align: center;
  top: 15%;
  left:50%;
  transform: translate(-50%,-50%);
  position: relative;
}

.contact {
  padding: 10px;
}

.contact a {
  padding: 5px;
  font-size: 23px;
}

a {
  color: #000;
}

a:hover {
  color: rgba(0,0,0,0.3);
}

.resume {
  font-family: lightfont;
  text-decoration: none;
  padding: 5px;
  margin: 5px;
}

.projectBanner {
  position: relative;
  left:50%;
  transform: translate(-50%);
  top: 15%;
  background-color: rgba(255,225,230,0.6);
  /* background-color:rgba(135, 206, 250, 0.3); */
  /* max-width: 1500px; */
  width: 100vw;
  padding-bottom: 50px;
  margin-bottom: 50px;
}

.project {
  width: 70vw;
  margin: 0 auto;
  text-align: center;
}

.projectHeader {
  padding: 30px 0px 0px 20px;
  /* text-align: left; */
  display: flex;
}

#projectHeader {
  position: absolute;
}

.projectList {
  margin-top: 80px;
  display: flex;
  -webkit-flex-flow: row wrap;
  justify-content: space-between;
}

.projectBox {
  padding: 20px;
  /* display: inline-block; */
}

.projectImage {
  position: relative;
  background-color: white;
  width:330px;
  height: 230px;
  margin: auto;
  overflow: hidden;
}

.projectImage .overlay {
  background: rgba(0,0,0,0.7);
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: all 0.4s ease-in-out 0s;
  -moz-transition: all 0.4s ease-in-out 0s;
  transition: all 0.4s ease-in-out 0s;
}

.projectImage:hover .overlay {
  opacity: 1;
}

.projectImage img {
  width: 330px;
  height: 230px;
}

.overlayText {
  position: absolute;
  color: #eee;
  text-align: center;
  padding-left: 1em;
  padding-right: 1em;
  width: 100%;
  top: 50%;
  left: 50%;
  opacity: 0;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  -webkit-transition: all 0.3s ease-in-out 0s;
  -moz-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.projectImage:hover .overlayText {
  top: 50%;
  left: 50%;
  opacity: 1;
}

.overlayText h3 {
  font-size: 30px;
}

.overlayText p {
  padding: 20px;
  padding-top: 0px;
}

.fadeIn {
  top: 20%;
}

.close {
  text-align: right;
  padding: 10px;
}

.close:hover {
  cursor: pointer;
}

/* .modal img {
  width: 300px;
  height: 250px;
  float: left;
  margin-top: -35px;
} */

.modal {
  max-width: 750px !important;
}

.modal img {
  width: 400px;
  height: 480px;
  float: left;
  margin-top: -50px;
}

.close {
  font-size: 30px;
}

.modal .text {
  font-family: Helvetica;
  padding-left: 430px;
  padding-right: 50px;
}

.text a {
  font-size: 30px;
}

#modal4 img {
  height: 703px;
}

#modal5 img {
  height: 715px;
}

#modal7 img {
  height: 576px;
}


/*typewriter animation*/

.title { 
    margin: 0 auto;
    margin-top: 50px;
    border-right: 2px solid rgba(255,255,255,.75);
    font-size: 300%;
    text-align: center;
    white-space: nowrap;
    line-height: 50px;
    overflow: hidden;  
}

.typewriter {
  animation: typewriter 2.5s steps(44) 1s 1 normal both,
             blink 1s step-end infinite;
  max-height: 38px;
}
@keyframes typewriter {
  from{width: 0;}
  to{width: 4.9em;}
}

@keyframes blink {
  from, to { border-color: transparent }
  50% { border-color: #000; }
}

